--- a/package.json
+++ b/package.json
@@ -1,26 +1,38 @@
 {
-  "name": "authenticator",
+  "name": "secure-authenticator",
   "version": "0.1.0",
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "jest"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^27.0.1",
-    "react": "16.3.1",
-    "react-native": "~0.55.2",
+    "expo": "^32.0.0",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "url-otpauth": "^2.0.0"
   },
   "devDependencies": {
-    "jest-expo": "~27.0.0",
-    "react-native-scripts": "1.14.0",
-    "react-test-renderer": "16.3.1"
+    "@types/expo": "^31.0.6",
+    "@types/expo__vector-icons": "^6.2.3",
+    "@types/react": "^16.7.18",
+    "@types/react-native": "^0.57.25",
+    "babel-preset-expo": "^5.0.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.0",
+    "prettier": "^1.15.3"
   },
-  "jest": {
-    "preset": "jest-expo"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx,json,css,md}": [
+      "prettier --single-quote --trailing-comma all --write",
+      "git add"
+    ]
   }
 }
