--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "^32.0.0",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-paper": "^2.15.2",
     "url-otpauth": "^2.0.0"
   },
   "devDependencies": {
