--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-paper": "^2.15.2",
+    "recompose": "^0.30.0",
     "url-otpauth": "^2.0.0"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "@types/expo__vector-icons": "^6.2.3",
     "@types/react": "^16.7.18",
     "@types/react-native": "^0.57.25",
+    "@types/recompose": "^0.30.6",
     "babel-preset-expo": "^5.0.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.0",
