--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "^32.0.0",
-    "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
-    "react-native-paper": "^2.15.2",
+    "expo": "^33.0.0",
+    "react": "16.8.3",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
+    "react-native-paper": "^2.16.0",
     "react-native-progress-circle": "^2.0.1",
     "recompose": "^0.30.0",
     "url-otpauth": "^2.0.0"
   },
   "devDependencies": {
-    "@types/expo": "^31.0.6",
-    "@types/expo__vector-icons": "^6.2.3",
-    "@types/react": "^16.7.18",
-    "@types/react-native": "^0.57.25",
+    "@types/expo__vector-icons": "^9.0.1",
+    "@types/react": "^16.8.22",
+    "@types/react-native": "^0.57.0",
     "@types/recompose": "^0.30.6",
-    "babel-preset-expo": "^5.0.0",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.0",
-    "prettier": "^1.15.3"
+    "husky": "^3.0.0",
+    "lint-staged": "^9.0.0",
+    "prettier": "^1.18.2",
+    "typescript": "^3.3.0"
   },
   "husky": {
     "hooks": {
