--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "buffer": "^5.2.1",
     "expo": "^33.0.0",
+    "expo-crypto": "^5.0.1",
     "react": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-paper": "^2.16.0",
     "react-native-progress-circle": "^2.0.1",
     "recompose": "^0.30.0",
+    "text-encoding": "^0.7.0",
     "url-otpauth": "^2.0.0"
   },
   "devDependencies": {
@@ -22,6 +25,7 @@
     "@types/react": "^16.8.22",
     "@types/react-native": "^0.57.0",
     "@types/recompose": "^0.30.6",
+    "@types/text-encoding": "^0.0.35",
     "husky": "^3.0.0",
     "lint-staged": "^9.0.0",
     "prettier": "^1.18.2",
