--- a/app.json
+++ b/app.json
@@ -1,14 +1,10 @@
 {
   "expo": {
-    "name": "Blank Template (TypeScript)",
-    "slug": "secure-authenticator",
-    "privacy": "public",
+    "name": "Volta",
+    "slug": "volta",
+    "privacy": "private",
     "sdkVersion": "36.0.0",
-    "platforms": [
-      "ios",
-      "android",
-      "web"
-    ],
+    "platforms": ["ios", "android", "web"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,9 +16,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     }
