:pencil2: Rename project

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Volta",
-    "slug": "volta",
+    "name": "Einmal",
+    "slug": "einmal",
     "privacy": "private",
     "sdkVersion": "36.0.0",
     "platforms": ["ios", "android", "web"],
