--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-paper": "^3.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7"
   },
