--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "@otplib/core": "12.0.1",
     "@otplib/plugin-base32-enc-dec": "12.0.1",
     "@otplib/plugin-crypto-js": "12.0.1",
+    "@react-native-community/masked-view": "0.1.5",
+    "@react-navigation/native": "^5.0.9",
+    "@react-navigation/stack": "^5.1.1",
     "buffer": "^5.5.0",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.5.0",
     "react-native-paper": "^3.6.0",
+    "react-native-reanimated": "~1.4.0",
+    "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7"
   },
