--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "tweetnacl": "1.0.3",
+    "tweetnacl-util": "0.15.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
