:heavy_plus_sign: Install scrypt-async

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
+    "scrypt-async": "^2.0.1",
     "tweetnacl": "1.0.3",
     "tweetnacl-util": "0.15.1"
   },
