--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@otplib/core": "12.0.1",
     "@otplib/plugin-base32-enc-dec": "12.0.1",
     "@otplib/plugin-crypto-js": "12.0.1",
+    "@react-native-community/hooks": "^2.4.7",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
