--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "buffer": "^5.5.0",
     "expo": "~36.0.0",
     "expo-asset": "~8.0.0",
+    "expo-file-system": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
