--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^10.0.0",
     "@otplib/core": "12.0.1",
     "@otplib/plugin-base32-enc-dec": "12.0.1",
     "@otplib/plugin-crypto-js": "12.0.1",
