--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo": "~36.0.0",
     "expo-asset": "~8.0.0",
     "expo-barcode-scanner": "~8.0.0",
+    "expo-constants": "~8.0.0",
     "expo-file-system": "~8.0.0",
     "expo-haptics": "~8.0.0",
     "react": "~16.9.0",
