:wrench: Prettify on commit

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,12 @@
 {
+  "printWidth": 80,
+  "tabWidth": 2,
   "trailingComma": "all",
-  "singleQuote": true
+  "arrowParens": "always",
+  "useTabs": false,
+  "semi": true,
+  "singleQuote": true,
+  "bracketSpacing": true,
+  "jsxSingleQuote": false,
+  "jsxBracketSameLine": false
 }
