--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "husky": "^4.2.3",
     "lint-staged": "^10.1.1",
     "prettier": "^2.0.2",
-    "typescript": "~3.6.3"
+    "typescript": "^3.8.3"
   },
   "husky": {
     "hooks": {
