--- a/package.json
+++ b/package.json
@@ -14,25 +14,25 @@
     "@otplib/plugin-base32-enc-dec": "12.0.1",
     "@otplib/plugin-crypto-js": "12.0.1",
     "@react-native-community/hooks": "^2.4.7",
-    "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
     "buffer": "^5.5.0",
-    "expo": "~36.0.0",
-    "expo-asset": "~8.0.0",
-    "expo-barcode-scanner": "~8.0.0",
-    "expo-constants": "~8.0.0",
-    "expo-file-system": "~8.0.0",
-    "expo-haptics": "~8.0.0",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.5.0",
+    "expo": "^37.0.0",
+    "expo-asset": "~8.1.4",
+    "expo-barcode-scanner": "~8.1.0",
+    "expo-constants": "~9.0.0",
+    "expo-file-system": "~8.1.0",
+    "expo-haptics": "~8.1.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.6.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "0.6.0",
-    "react-native-screens": "2.0.0-alpha.12",
-    "react-native-web": "~0.11.7",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-web": "^0.11.7",
     "scrypt-async": "^2.0.1",
     "tweetnacl": "1.0.3",
     "tweetnacl-util": "0.15.1",
@@ -41,9 +41,9 @@
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@types/node": "^13.9.0",
-    "@types/react": "~16.9.0",
-    "@types/react-native": "~0.60.23",
-    "babel-preset-expo": "~8.0.0",
+    "@types/react": "^16.9.11",
+    "@types/react-native": "^0.60.22",
+    "babel-preset-expo": "^8.1.0",
     "husky": "^4.2.3",
     "lint-staged": "^10.1.1",
     "prettier": "^2.0.2",
