--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "^0.11.7",
-    "scrypt-async": "^2.0.1",
+    "scrypt-async": "2.0.1",
     "tweetnacl": "1.0.3",
     "tweetnacl-util": "0.15.1",
-    "url-otpauth": "^2.0.0"
+    "url-otpauth": "2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
