--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "~9.0.0",
     "expo-file-system": "~8.1.0",
     "expo-haptics": "~8.1.0",
+    "expo-random": "~8.1.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
