--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-barcode-scanner": "~8.1.0",
     "expo-constants": "~9.0.0",
     "expo-file-system": "~8.1.0",
+    "expo-font": "~8.1.0",
     "expo-haptics": "~8.1.0",
     "expo-random": "~8.1.0",
     "react": "16.9.0",
