:building_construction: Restructure encryption flow

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-font": "~8.1.0",
     "expo-haptics": "~8.1.0",
     "expo-random": "~8.1.0",
+    "ramda": "^0.27.0",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.0.tar.gz",
@@ -37,7 +38,7 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "^0.11.7",
-    "scrypt-js": "^3.0.0",
+    "scrypt-async": "^2.0.1",
     "tweetnacl": "1.0.3",
     "tweetnacl-util": "0.15.1",
     "url-otpauth": "2.0.0",
