--- a/ios/Einmal/Info.plist
+++ b/ios/Einmal/Info.plist
@@ -60,7 +60,7 @@
 	<key>NSRemindersUsageDescription</key>
 	<string>Allow Einmal to access your reminders</string>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>SplashScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
