--- a/package.json
+++ b/package.json
@@ -7,16 +7,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "^37.0.0",
-    "expo-updates": "~0.1.0",
-    "react": "~16.9.0",
-    "react-dom": "16.9.0",
-    "react-native": "~0.61.5",
-    "react-native-gesture-handler": "~1.6.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-screens": "~2.2.0",
-    "react-native-unimodules": "~0.9.0",
-    "react-native-web": "^0.11.7",
     "@expo/vector-icons": "^10.0.0",
     "@otplib/core": "12.0.1",
     "@otplib/plugin-base32-enc-dec": "12.0.1",
@@ -26,6 +16,7 @@
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
     "buffer": "^5.5.0",
+    "expo": "^37.0.0",
     "expo-asset": "~8.1.4",
     "expo-barcode-scanner": "~8.1.0",
     "expo-constants": "~9.0.0",
@@ -33,11 +24,21 @@
     "expo-font": "~8.1.0",
     "expo-haptics": "~8.1.0",
     "expo-random": "~8.1.0",
+    "expo-splash-screen": "^0.2.0",
+    "expo-updates": "~0.1.0",
     "ramda": "^0.27.0",
+    "react": "~16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "~0.61.5",
     "react-native-draggable-flatlist": "^2.3.2",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.6.0",
+    "react-native-reanimated": "~1.7.0",
     "react-native-redash": "^12.0.4",
     "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-unimodules": "~0.9.0",
+    "react-native-web": "^0.11.7",
     "scrypt-async": "^2.0.1",
     "tweetnacl": "1.0.3",
     "tweetnacl-util": "0.15.1",
@@ -46,16 +47,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
-    "babel-jest": "~25.2.6",
-    "jest": "~25.2.6",
-    "react-test-renderer": "~16.9.0",
     "@types/node": "^13.9.0",
     "@types/react": "^16.9.11",
     "@types/react-native": "^0.60.22",
+    "babel-jest": "~25.2.6",
     "babel-preset-expo": "^8.1.0",
     "husky": "^4.2.3",
+    "jest": "~25.2.6",
     "lint-staged": "^10.1.1",
     "prettier": "^2.0.2",
+    "react-test-renderer": "~16.9.0",
     "typescript": "^3.8.3"
   },
   "husky": {
