:robot: Compute derived key natively on Android

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -193,6 +193,8 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation (name:'crypto', ext:'aar')
 }
 
 // Run this once to be able to run the application with BUCK
@@ -203,3 +205,9 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+repositories {
+    flatDir {
+        dirs '.'
+    }
+}
