--- a/ios/Podfile
+++ b/ios/Podfile
@@ -43,4 +43,6 @@ target 'Einmal' do
 
   # react-native-cli autolinking
   use_native_modules!
+  pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
+
 end
