--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "~1.7.0",
     "react-native-redash": "^12.0.4",
-    "react-native-safe-area-context": "0.7.3",
+    "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-unimodules": "~0.9.0",
     "react-native-web": "^0.11.7",
