--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "Einmal",
     "slug": "einmal",
     "privacy": "unlisted",
-    "platforms": ["ios", "android", "web"],
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
