--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-random": "~8.1.0",
     "expo-splash-screen": "^0.2.0",
     "expo-updates": "~0.1.0",
+    "immer": "^6.0.3",
     "ramda": "^0.27.0",
     "react": "~16.9.0",
     "react-dom": "16.9.0",
