:heavy_plus_sign: Install expo-linear-gradient

--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "expo-file-system": "~8.1.0",
     "expo-font": "~8.1.0",
     "expo-haptics": "~8.1.0",
+    "expo-linear-gradient": "^8.1.0",
     "expo-random": "~8.1.0",
     "expo-splash-screen": "^0.2.0",
     "expo-updates": "~0.1.0",
     "immer": "^6.0.3",
     "ramda": "^0.27.0",
+    "randomcolor": "^0.5.4",
     "react": "~16.9.0",
     "react-dom": "16.9.0",
     "react-native": "~0.61.5",
