:heavy_plus_sign: Install react-native-fs

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -45,4 +45,6 @@ target 'Einmal' do
   use_native_modules!
   pod 'react-native-safe-area-context', :path => '../node_modules/react-native-safe-area-context'
 
+  pod 'RNFS', :path => '../node_modules/react-native-fs'
+
 end
