--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "16.9.0",
     "react-native": "~0.61.5",
     "react-native-draggable-flatlist": "^2.3.2",
+    "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-paper": "^3.6.0",
     "react-native-reanimated": "~1.7.0",
