:robot: Set up Android production build

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -19,3 +19,6 @@
 
 android.useAndroidX=true
 android.enableJetifier=true
+
+EINMAL_UPLOAD_STORE_FILE=einmal.keystore
+EINMAL_UPLOAD_KEY_ALIAS=einmal
