--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -150,6 +150,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('EINMAL_UPLOAD_STORE_FILE')) {
+                storeFile file(EINMAL_UPLOAD_STORE_FILE)
+                storePassword EINMAL_UPLOAD_KEYSTORE_PASSWORD
+                keyAlias EINMAL_UPLOAD_KEY_ALIAS
+                keyPassword EINMAL_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -158,7 +166,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
