--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "einmal",
     "privacy": "unlisted",
     "platforms": ["ios", "android"],
-    "version": "1.0.0",
+    "version": "1.0.0-beta.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "backgroundColor": "#000000",
