--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-file-system": "~8.1.0",
     "expo-font": "~8.1.0",
     "expo-haptics": "~8.1.0",
+    "expo-local-authentication": "^9.0.0",
     "expo-random": "~8.1.0",
     "expo-splash-screen": "^0.2.0",
     "immer": "^6.0.3",
