--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-haptics": "~8.1.0",
     "expo-local-authentication": "^9.0.0",
     "expo-random": "~8.1.0",
+    "expo-secure-store": "^8.1.0",
     "expo-splash-screen": "^0.2.0",
     "immer": "^6.0.3",
     "ramda": "^0.27.0",
